[workspace]
resolver = "3"
members = ["client", "server", "utils"]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rsa = "0.9.2"
rand = "0.8.3"
rand_new = { git = "https://github.com/rust-random/rand.git", tag = "0.9.1" , package = "rand"}
p256 = {version = "0.13.2", features = ["ecdh"]}
