[workspace]
resolver = "3"
members = ["client", "server", "utils"]

[workspace.dependencies]
aes-gcm-siv = "0.11.1"
async-std = {version = "1.13.1", features = ["attributes"]}
console = "0.15.11"
p256 = {version = "0.13.2", features = ["ecdh"]}
rsa = "0.9.8"
serde_json = "1.0.140"
sha3 = "0.10.8"
sql = "0.4.3"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-async-std"]}
srp6 = "1.0.0-beta.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

