[workspace]
resolver = "3"
members = ["client", "server", "utils"]

[workspace.dependencies]
chacha20poly1305 = "0.10.1"
async-std = {version = "1.13.1", features = ["attributes"]}
console = "0.15.11"
figment = {version = "0.10.19", features = ["yaml"]}
p256 = {version = "0.13.2", features = ["ecdh"]}
rsa = "0.9.8"
serde = "1.0.219"
serde_json = "1.0.140"
sha3 = "0.10.8"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-async-std"]}
srp6 = "1.0.0-beta.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"