[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv.workspace = true
console.workspace = true
p256.workspace = true
rsa.workspace = true
serde_json.workspace = true
sha3.workspace = true
srp6.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utils = {path = "../utils"}