[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
aes-gcm-siv.workspace = true
async-std.workspace = true
p256.workspace = true
rsa.workspace = true
serde_json.workspace = true
sha3.workspace = true
sql.workspace = true
sqlx.workspace = true
srp6.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utils = {path = "../utils"}